# backend/src/main/java/com/csse/healthSphere/dto/AppointmentCreation.java
@@ -1,0 +1,11 @@
+package com.csse.healthSphere.dto;
+
+import lombok.Data;
+
+import java.time.LocalDate;
+
+@Data
+public class AppointmentCreation {
+    private LocalDate date;
+    private long scheduleId;
+}
